# react-drf-app-v2

backend/: .gitignore  pyproject.toml
backend/vedraby/: manage.py
backend/vedraby/profiles/: admin.py  models.py
backend/vedraby/user/: admin.py  models.py  signals.py
backend/vedraby/vedraby/: asgi.py  settings.py  urls.py  wsgi.py
