[tool.poetry]
name = "vedraby"
version = "0.1.0"
description = "web application for selling cars"
authors = ["Z1pP <maxm_99@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
django = "^5.1.2"
psycopg2-binary = "^2.9.9"
black = "^24.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
